--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             height: 400px;
             margin: 100px auto 0 auto;
             box-shadow: 0 0 5px #3460ab;
-            /* overflow: hidden; */
+            overflow: hidden;
         }
         .wrap {
             position: absolute;
